Adicionando uma classe apenas para a URL